@@ -1,11 +1,10 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.util;
 
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.util.io.BufferExposingByteArrayOutputStream;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.Strings;
@@ -31,12 +30,10 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.*;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 @ApiStatus.Internal
@@ -61,11 +58,10 @@ public final class SVGLoader {
           String dbPath = System.getProperty("idea.ui.icons.prebuilt.db");
           if (!"false".equals(dbPath)) {
             if (dbPath == null || dbPath.isEmpty()) {
-              Path distDir = Paths.get(PathManager.getHomePath());
-              dbFile = (SystemInfoRt.isMac ? distDir.resolve("Resources") : distDir).resolve("icons.db");
+              dbFile = Path.of(PathManager.getHomePath()).resolve("bin/icons.db");
             }
             else {
-              dbFile = Paths.get(dbPath);
+              dbFile = Path.of(dbPath);
             }
           }
         }
@@ -81,7 +77,7 @@ public final class SVGLoader {
 
       SvgCacheManager cache;
       try {
-        cache = USE_CACHE ? new SvgCacheManager(Paths.get(PathManager.getSystemPath(), "icons-v2.db")) : null;
+        cache = USE_CACHE ? new SvgCacheManager(Path.of(PathManager.getSystemPath(), "icons-v2.db")) : null;
       }
       catch (Exception e) {
         Logger.getInstance(SVGLoader.class).error(e);
@@ -429,40 +425,6 @@ public final class SVGLoader {
     return s;
   }
 
-  /**
-   * @deprecated use {@link #setColorPatcherProvider(SvgElementColorPatcherProvider)} instead
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.2")
-  public static void setColorPatcher(@Nullable final SvgColorPatcher colorPatcher) {
-    if (colorPatcher == null) {
-      setColorPatcherProvider(null);
-      return;
-    }
-
-    setColorPatcherProvider(new SvgElementColorPatcherProvider() {
-      @Override
-      public SvgElementColorPatcher forPath(@Nullable String path) {
-        return new SvgElementColorPatcher() {
-          @Override
-          public void patchColors(@NotNull Element svg) {
-            try {
-              colorPatcher.patchColors(path == null ? null : new URL("jar", "icons", path), svg);
-            }
-            catch (MalformedURLException e) {
-              colorPatcher.patchColors(null, svg);
-            }
-          }
-
-          @Override
-          public byte @Nullable [] digest() {
-            return null;
-          }
-        };
-      }
-    });
-  }
-
   public static void setColorPatcherProvider(@Nullable SvgElementColorPatcherProvider colorPatcher) {
     ourColorPatcher = colorPatcher;
     IconLoader.clearCache();
@@ -510,24 +472,6 @@ public final class SVGLoader {
 
     default @Nullable SvgElementColorPatcher forPath(@Nullable String path) {
       return forURL(null);
-    }
-  }
-
-  /**
-   * @deprecated use {@link SvgElementColorPatcherProvider instead}
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.2")
-  public interface SvgColorPatcher {
-
-    /**
-     * @deprecated use {@link #patchColors(URL, Element)}
-     */
-    @Deprecated
-    default void patchColors(@SuppressWarnings("unused") @NotNull Element svg) {}
-
-    default void patchColors(@Nullable @SuppressWarnings("unused") URL url, @NotNull Element svg) {
-      patchColors(svg);
     }
   }
 }
